@@ -1,6 +1,6 @@
 package com.basebackend.messaging.producer;
 
-import com.alibaba.fastjson2.JSON;
+import com.basebackend.common.util.JsonUtils;
 import com.basebackend.messaging.config.MessagingProperties;
 import com.basebackend.messaging.constants.RocketMQConstants;
 import com.basebackend.messaging.exception.MessageSendException;
@@ -38,14 +38,8 @@ public class RocketMQProducer implements MessageProducer {
     private final MessagingProperties messagingProperties;
     private final TransactionalMessageService transactionalMessageService;
 
-    /** 异步发送线程池 */
-    private final ExecutorService asyncExecutor = Executors.newFixedThreadPool(
-            Runtime.getRuntime().availableProcessors() * 2,
-            r -> {
-                Thread t = new Thread(r, "msg-async-sender");
-                t.setDaemon(true);
-                return t;
-            });
+    /** 异步发送执行器（虚拟线程） */
+    private final ExecutorService asyncExecutor = Executors.newVirtualThreadPerTaskExecutor();
 
     @Override
     public <T> String send(Message<T> message) {
@@ -54,7 +48,7 @@ public class RocketMQProducer implements MessageProducer {
 
         try {
             String destination = buildDestination(message.getTopic(), message.getTags());
-            String payload = JSON.toJSONString(message);
+            String payload = JsonUtils.toJsonString(message);
 
             org.springframework.messaging.Message<String> springMessage = MessageBuilder.withPayload(payload)
                     .setHeader("messageId", message.getMessageId())
@@ -140,7 +134,7 @@ public class RocketMQProducer implements MessageProducer {
 
         try {
             String destination = buildDestination(message.getTopic(), message.getTags());
-            String payload = JSON.toJSONString(message);
+            String payload = JsonUtils.toJsonString(message);
 
             // 转换延迟时间为RocketMQ延迟级别
             int delayLevel = RocketMQConstants.getDelayLevel(delayMillis);
@@ -202,7 +196,7 @@ public class RocketMQProducer implements MessageProducer {
 
         try {
             String destination = buildDestination(message.getTopic(), message.getTags());
-            String payload = JSON.toJSONString(message);
+            String payload = JsonUtils.toJsonString(message);
 
             org.springframework.messaging.Message<String> springMessage = MessageBuilder.withPayload(payload)
                     .setHeader("messageId", message.getMessageId())
